# DataQuery

./: .gitignore  README.md  dataquery.py  pyproject.toml  readme.md  requirements.txt
.devcontainer/: devcontainer.json
docs/: dataquery.html  index.html  search.js
docs/dataquery/: app.html  cli.html
src/dataquery/: __init__.py  app.py  cli.py
